# replica

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-deb.sh  create-apt-repo.sh  install.bat  install.sh  meson.build  setup-publishing.sh
.github/instructions/: ARCHITECTURE.instructions.md  CODE_OF_CONDUCT.instructions.md  CONTRIBUTING.instructions.md  INSTALL.instructions.md  ISSUE_TEMPLATE.instructions.md  LICENSE.instructions.md  PULL_REQUEST_TEMPLATE.instructions.md  ROADMAP.instructions.md  SECURITY.instructions.md  SUPPORT.instructions.md  linkedin.instructions.md  readme.instructions.md  release-notes.instructions.md
.github/prompts/: ARCHITECTURE.prompt.md  CODE_OF_CONDUCT.prompt.md  CONTRIBUTING.prompt.md  INSTALL.prompt.md  ISSUE_TEMPLATE.prompt.md  LICENSE.prompt.md  PULL_REQUEST_TEMPLATE.prompt.md  ROADMAP.prompt.md  SECURITY.prompt.md  SUPPORT.prompt.md  generate-linkedin.prompt.md  generate-readme.prompt.md  generate-release-notes.prompt.md
.github/responses/: post.txt
.github/samples/linkedin/: posts.txt
.github/workflows/: build-and-release.yml
debian/: changelog  control  copyright  files  rpc.1  rpc.manpages  rules
replica-aur/: PKGBUILD
src/: cli_utils.c  cli_utils.h  copy.c  copy.h  main.c  print_utils.c  print_utils.h
